Code generation & automata-theory (#13)
* Implemented code generation
- removed previous all_patterns.txt to use a single JSON file containing all patterns and their 'configuration'
- gRPC unary - unary is now working
- gRPC stream - stream, stream - unary, unary - stream have skeleton impl
- improved pattern detection
- refacto supports(x) function

* Sessions can now be turned into FDA, message patterns are created using regex
No need for supports(x) anymore
By default, final states must be specified by the writers, they won't be automatically generated

* Fix the way Cdt was used to create sessions : it only worked for the left branch.
Now it properly handles recursive calls for both branches

* all tests pass now